# orderflow-integrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.cloudflare.yml  docker-compose.yml  pyproject.toml  render.yaml  wrangler.jsonc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_orderflow_tables.py
app/: __init__.py  celery_app.py  database.py  main.py  models.py  seed.py  tasks.py
app/core/: config.py
app/schemas/: order.py
app/services/: connectors.py  imports.py  order_flow.py
app/static/: dashboard.css  dashboard.js
app/templates/: dashboard.html
examples/: demo-orders.csv
static-demo/: _headers  app.js  index.html  styles.css
tests/: conftest.py  test_health.py  test_ingestion.py  test_orders.py
