[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orderflow-integrator"
version = "0.2.0"
description = "Portfolio-ready order routing and integration control tower."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.14,<2",
  "psycopg[binary]>=3.2,<4",
  "celery[redis]>=5.4,<6",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.18,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
